# mcp-protocol-sdk

./: .gitignore  .local-ci-status  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  after.txt  clippy.toml  codecov.yml  deny.toml  fix-badges.sh  rustfmt.toml  tmp_completion.md  update_summary.md
.github/: SETUP_PAT.md  WORKFLOW_STATUS.md  badge-validation.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml  integration_help.md  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: badge-update.yml  benchmarks.yml  ci.yml  codecov-refresh.yml  dependencies.yml  docs.yml  pages.yml  quality.yml  release.yml  security.yml
benchmark-comparison/: comparison.md
dependency-analysis/: dependency-report.md
docs/: 404.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  DOCS.md  Gemfile  LOCAL_CI_GUIDE.md  OSS-LAUNCH-SUMMARY.md  PUBLISHING.md  README.md  REPOSITORY_HYGIENE.md  SCHEMA_COMPLIANCE.md  SECURITY.md  UPGRADE_COMPLETE.md  UPGRADE_PROGRESS.md  _config.yml  api-reference.md  architecture.md  comparison-official-sdk.md  configuration.md  examples.md  getting-started.md  implementation-guide.md  index.md  naming-rationale.md  nav.md  platform-support.md  publishing-guide.md  transports.md  utils.md
docs/api/: README.md
docs/clients/: README.md
docs/integrations/: claude-desktop.md  cursor.md  other-clients.md
docs/reference/legacy-types/: README.md  mcp_2025_complete_types.rs
docs/servers/: README.md
examples/: README.md  advanced_http_client.rs  client_example.rs  conservative_http_demo.rs  database_server.rs  echo_server.rs  http_client.rs  http_server.rs  simple_server.rs  transport_benchmark.rs  websocket_client.rs  websocket_server.rs
examples/client/: README.md  advanced_http_client.rs  basic_client.rs  conservative_http_demo.rs  http_client.rs  websocket_client.rs
examples/server/: README.md  database_server.rs  echo_server.rs  http_server.rs  simple_server.rs  websocket_server.rs
examples/utilities/: README.md  transport_benchmark.rs
license-check-results/: licenses.json
schema/: mcp_2025_complete_messages.rs
scripts/: README.md  badge-manager.sh  ci-check.sh  create-labels.sh  fix_comprehensive_tests.rs  integration_test.sh  local-ci.sh  setup-dev.sh  validate-workflows.sh  verify-environment.sh  verify-publication.sh
src/: lib.rs
src/client/: builder.rs  mcp_client.rs  mod.rs  session.rs
src/core/: error.rs  mod.rs  prompt.rs  resource.rs  tool.rs  tool_discovery.rs  tool_metadata.rs  validation.rs
src/protocol/: messages.rs  methods.rs  missing_types.rs  mod.rs  types.rs  types_2025.rs  validation.rs
src/server/: handlers.rs  http_server.rs  lifecycle.rs  mcp_server.rs  mod.rs  test_types.rs
src/transport/: http.rs  mod.rs  stdio.rs  traits.rs  websocket.rs
src/utils/: uri.rs
tests/: basic_test.rs  comprehensive_schema_tests.rs  core_tests.rs  edge_cases_and_negative_tests.rs  enhanced_schema_compliance_tests.rs  fixed_integration_tests.rs  initialization_fix_test.rs  integration_cross_transport.rs  integration_e2e_http.rs  integration_e2e_stdio.rs  integration_e2e_websocket.rs  protocol_tests.rs  protocol_validation_comprehensive.rs  schema_tests.rs  server_tests.rs  test_readme_examples.rs  transport_integration_tests.rs  transport_tests.rs  working_integration_tests.rs
