[package]
name = "mcp-protocol-sdk"
version = "0.3.0"
edition = "2021"
rust-version = "1.82"  # Minimum stable Rust version
authors = ["MCP Rust Contributors <mcp-rust@users.noreply.github.com>"]
description = "Production-ready Rust SDK for the Model Context Protocol (MCP) with multiple transport support"
license = "MIT"
repository = "https://github.com/mcp-rust/mcp-protocol-sdk"
keywords = ["mcp", "ai", "protocol", "jsonrpc", "llm"]
categories = ["api-bindings", "network-programming", "development-tools", "asynchronous"]
readme = "README.md"
homepage = "https://mcp-rust.github.io/mcp-protocol-sdk/"
documentation = "https://docs.rs/mcp-protocol-sdk"
exclude = [
    "target/",
    ".github/",
    "docs/",
    "benches/",
    "scripts/",
    "*.md",
    "Makefile",
    "deny.toml",
    "clippy.toml",
    "rustfmt.toml"
]

[lib]
name = "mcp_protocol_sdk"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = "0.1.83"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client/server
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# WebSocket support
tokio-tungstenite = { version = "0.27", optional = true }
futures-util = { version = "0.3", optional = true }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
url = "2.5"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
fastrand = { version = "2.0", optional = true }

# Schema validation
jsonschema = { version = "0.30", optional = true }

# Note: Process support is built into modern tokio (tokio::process)
# No additional dependencies needed for stdio transport

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.6"
pretty_assertions = "1.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[features]
default = ["stdio", "tracing-subscriber", "chrono"]
full = ["stdio", "http", "websocket", "validation", "tracing-subscriber", "chrono"]
stdio = []  # Uses tokio::process from main tokio crate
http = ["axum", "tower", "tower-http", "reqwest", "chrono", "tokio-stream", "futures", "fastrand"]
websocket = ["tokio-tungstenite", "http", "futures", "futures-util"]
validation = ["jsonschema"]

[[example]]
name = "simple_server"
path = "examples/simple_server.rs"
required-features = ["stdio", "tracing-subscriber"]

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["stdio", "tracing-subscriber"]

[[example]]
name = "client_example"
path = "examples/client_example.rs"
required-features = ["stdio"]

[[example]]
name = "database_server"
path = "examples/database_server.rs"
required-features = ["stdio", "tracing-subscriber"]

[[example]]
name = "http_server"
path = "examples/http_server.rs"
required-features = ["http"]

[[example]]
name = "http_client"
path = "examples/http_client.rs"
required-features = ["http"]

[[example]]
name = "websocket_server"
path = "examples/websocket_server.rs"
required-features = ["websocket"]

[[example]]
name = "websocket_client"
path = "examples/websocket_client.rs"
required-features = ["websocket"]

[[example]]
name = "conservative_http_demo"
path = "examples/conservative_http_demo.rs"
required-features = ["http", "tracing-subscriber"]

[[example]]
name = "transport_benchmark"
path = "examples/transport_benchmark.rs"
required-features = ["http", "tracing-subscriber"]

[[example]]
name = "advanced_http_client"
path = "examples/advanced_http_client.rs"
required-features = ["http", "tracing-subscriber", "chrono", "fastrand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
