[package]
name = "mcp-protocol-sdk"
version = "0.5.1"
edition = "2024"
rust-version = "1.85" # Minimum for Rust 2024 Edition
authors = ["MCP Rust Contributors <mcp-rust@users.noreply.github.com>"]
description = "Production-ready Rust SDK for the Model Context Protocol (MCP) with multiple transport support"
license = "MIT"
repository = "https://github.com/mcp-rust/mcp-protocol-sdk"
keywords = ["mcp", "ai", "protocol", "jsonrpc", "llm"]
categories = ["api-bindings", "network-programming", "development-tools", "asynchronous"]
readme = "README.md"
homepage = "https://mcp-rust.github.io/mcp-protocol-sdk/"
documentation = "https://docs.rs/mcp-protocol-sdk"
exclude = [
    "target/",
    ".github/",
    "docs/",
    "benches/",
    "scripts/",
    "*.md",
    "Makefile",
    "deny.toml",
    "clippy.toml",
    "rustfmt.toml"
]

[lib]
name = "mcp_protocol_sdk"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = "0.1.83"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client/server
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false, optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# WebSocket support
tokio-tungstenite = { version = "0.27", optional = true }
futures-util = { version = "0.3", optional = true }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
url = "2.5"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
fastrand = { version = "2.0", optional = true }

# Schema validation
jsonschema = { version = "0.32", optional = true }

# Note: Process support is built into modern tokio (tokio::process)
# No additional dependencies needed for stdio transport

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.7"
pretty_assertions = "1.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[features]
default = ["stdio", "tracing-subscriber", "chrono"]
full = ["stdio", "http", "websocket", "validation", "tracing-subscriber", "chrono"]
stdio = ["chrono"]  # Uses tokio::process + chrono for tool metadata  
http = ["axum", "tower", "tower-http", "reqwest", "chrono", "tokio-stream", "futures", "fastrand"]
websocket = ["tokio-tungstenite", "http", "futures", "futures-util"]
validation = ["jsonschema"]

# Client Examples
[[example]]
name = "basic_client"
path = "examples/client/basic_client.rs"
required-features = ["stdio"]

[[example]]
name = "http_client"
path = "examples/client/http_client.rs"
required-features = ["http"]

[[example]]
name = "advanced_http_client"
path = "examples/client/advanced_http_client.rs"
required-features = ["http", "tracing-subscriber", "chrono", "fastrand"]

[[example]]
name = "websocket_client"
path = "examples/client/websocket_client.rs"
required-features = ["websocket"]

[[example]]
name = "conservative_http_demo"
path = "examples/client/conservative_http_demo.rs"
required-features = ["http", "tracing-subscriber"]

# Server Examples
[[example]]
name = "simple_server"
path = "examples/server/simple_server.rs"
required-features = ["stdio", "tracing-subscriber"]

[[example]]
name = "echo_server"
path = "examples/server/echo_server.rs"
required-features = ["stdio", "tracing-subscriber"]

[[example]]
name = "database_server"
path = "examples/server/database_server.rs"
required-features = ["stdio", "tracing-subscriber"]

[[example]]
name = "http_server"
path = "examples/server/http_server.rs"
required-features = ["http"]

[[example]]
name = "websocket_server"
path = "examples/server/websocket_server.rs"
required-features = ["websocket"]

# Utility Examples
[[example]]
name = "transport_benchmark"
path = "examples/utilities/transport_benchmark.rs"
required-features = ["http", "tracing-subscriber"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
